# weaksymbols

./: .gitignore  Makefile.am  NOTES  configure.ac  foo_dri.c  foo_dri.h  libvdpau_foo.c  libvdpau_foo.h  user.c  weaksyms.sym
